    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building with a positive value of
      \option{--with-valgrind-instrumentation} now also instruments logical,
      complex and raw vectors.

      \item There is experimental support for \emph{link-time
	optimization} with \command{gcc} 4.5.0 or later on platforms
      which support it.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{str(x, width)} now obeys its \code{width}
      argument also for function headers and other objects \code{x}
      where \code{deparse()} is applied.

      \item The convention for \code{x \%/\% 0L} for integer-mode \code{x}
      has been changed from \code{0L} to \code{NA_integer_}.
      (\PR{14754})

      \item The \code{exportMethods} directive in a \file{NAMESPACE}
      file now exports S4 generics as necessary, as the extensions
      manual said it does.  The manual has also been updated to be a
      little more informative on this point.

      It is now required that there is an S4 generic (imported or
      created in the package) when methods are to be exported.

      \item Reference methods cannot safely use non-exported entries
      in the namespace.  We now do not do so, and warn in the documentation.

      \item The namespace import code was warning when identical
      S4 generic functions were imported more than once, but should
      not (reported by Brian Ripley, then Martin Morgan).

      \item \code{merge()} is no longer allowed to create a data frame
      with duplicate column names (which confused \PR{14786}).

      \item Fixes for rendering raster images on X11 and Windows devices
      when the x-axis or y-axis scale is reversed.

      \item \code{getAnywhere()} found S3 methods as seen from the
      \pkg{utils} namespace and not from the environment from which it
      was called.

      \item \code{selectMethod(f, sig)} would not return inherited group